--- a/styel/style.css
+++ b/styel/style.css
@@ -1,3 +1,61 @@
-h3{
-     font-weight: 200;
+.border-box {
+    width: 500px;  /* Adjust width */
+    height: 500px; /* Adjust height */
+    border: 2px solid black;
+    background-color: #e61e65;
+} 
+
+.border-box h3{
+
+    font-size: x-large;
+    color: aliceblue;  
+
+/* fb9b11 */
+}
+.border-box2 {
+    width: 500px;  /* Adjust width */
+    height: 500px; /* Adjust height */
+    border: 2px solid black;
+    display: grid;
+    grid-row: auto;
+    background-color:#fb9b11 ;
+    gap: 10px;
+} 
+
+ 
+.child-div2
+{
+    border: 2px solid red;
+    /* height: 150px; */
+    background-color: #a93bbb;
+    gap: 10px;
+}
+.child-div3
+{
+    border: 2px solid red;
+    /* height: 150px; */
+    background-color: #576c7a;gap: 10px;
+}
+
+.container
+{
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    gap: 10px;gap: 10px;
+ 
+} 
+
+.b-box3
+{
+     display: grid;
+     grid-row: auto;
+     grid-template-columns: repeat(2,1fr);gap: 10px;
+
+}
+
+@media screen and (max-width:576px) {
+
+    
+    
 }
