--- a/styel/style.css
+++ b/styel/style.css
@@ -56,6 +56,75 @@
 
 @media screen and (max-width:576px) {
 
+    .container
+
+    {
+        display: flex;
+        flex-direction: column;
+        min-height: auto;
+    }
     
-    
+    .container .b-box3
+    {
+        display: flex;
+        flex-direction: column;
+        min-height: auto;
+    }
+    .div-container 
+    {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .div-container .imgg1 .imgg
+    {
+        width: 100%;
+      
+    }
+                    
+} 
+
+
+.imgg
+{
+    height: 50%;
+    width: 50%;
 }
+
+@media screen (min-width:577px) and (max-width:768px) {
+    .imgg img{
+        display: flex;
+        text-align:center;
+          
+    }
+    .div-container 
+    {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .div-container .imgg1 .imgg
+    {
+        width: 100%;
+      
+    }
+                    
+}
+@media screen (min-width:769px)  {
+    .imgg img{
+          display: flex;
+          text-align:center;
+    }
+
+    .div-container 
+    {
+        display: flex;
+        flex-direction:   row;
+        justify-content: center;
+        align-items: center;
+    }
+} 
