--- a/styel/style.css
+++ b/styel/style.css
@@ -127,4 +127,79 @@
         justify-content: center;
         align-items: center;
     }
+    .div-container .imgg1 img{
+        width: 100%;
+        height: 100%;
+    }
 } 
+
+.responsive-img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
+
+
+ 
+ 
+ 
+.responsive-img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
+
+ 
+.responsive-img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
+ 
+
+ 
+@media (max-width: 1000px) {
+    .responsive-img {
+        width: 80%;  
+    }
+}
+
+
+ 
+.responsive-img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
+
+ 
+@media (max-width: 600px) {
+    .responsive-img {
+        width: 100%;
+        height: auto;
+    }
+}
+
+ 
+@media (min-width: 601px) and (max-width: 768px) {
+    .responsive-img {
+        width: 100%;  
+        height: auto;
+    }
+}
+
+ 
+@media (min-width: 769px) and (max-width: 1024px) {
+    .responsive-img {
+        width: 100%; 
+        height: auto;
+    }
+}
+
+ 
+@media (min-width: 1025px) {
+    .responsive-img {
+        width: 100%;   
+        height: auto;
+    }
+}
