--- a/styel/style2.css
+++ b/styel/style2.css
@@ -28,3 +28,27 @@ img{
     grid-template-columns: repeat(2,1fr);
     gap: 5px;
 }
+
+/* mediaa query */
+
+@media screen and (max-width: 576px) {
+
+
+    .row {
+        flex-direction: column;
+    } 
+
+    .square-collage
+    {
+        grid-template-columns: 1fr;
+    }
+    
+}
+
+/* for medium devices */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .row{
+        height: auto;
+        flex-direction: column;
+    }
+}
